BOOKKEEPER-743: Periodic ledger check running too often as doc doesn't match implementation. (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/branches/branch-4.2@1589695 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -22,6 +22,8 @@ Release 4.2.3 - 2013-12-04
 
         BOOKKEEPER-742: Fix for empty ledgers losing quorum. (ivank)
 
+        BOOKKEEPER-743: Periodic ledger check running too often as doc doesn't match implementation. (ivank)
+
 Release 4.2.2 - 2013-10-02
 
   Backward compatible changes:
