BOOKKEEPER-716: padding writes for bookie journal (sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1591079 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -182,6 +182,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-743: Periodic ledger check running too often as doc doesn't match implementation. (ivank)
 
+        BOOKKEEPER-716: padding writes for bookie journal (sijie via ivank)
+
       hedwig-server:
 
         BOOKKEEPER-601: readahead cache size isn't updated correctly (sijie via fpj)
