BOOKKEEPER-744: Run the auditor bookie check periodically (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1592705 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -184,6 +184,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-716: padding writes for bookie journal (sijie via ivank)
 
+        BOOKKEEPER-744: Run the auditor bookie check periodically (ivank)
+
       hedwig-server:
 
         BOOKKEEPER-601: readahead cache size isn't updated correctly (sijie via fpj)
