--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -24,6 +24,8 @@ Release 4.2.3 - 2013-12-04
 
         BOOKKEEPER-743: Periodic ledger check running too often as doc doesn't match implementation. (ivank)
 
+        BOOKKEEPER-744: Run the auditor bookie check periodically (ivank)
+
 Release 4.2.2 - 2013-10-02
 
   Backward compatible changes:
