BOOKKEEPER-756: Use HashedwheelTimer for request timeouts for PCBC (sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1597752 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -192,6 +192,8 @@ Trunk (unreleased changes)
 	
 	BOOKKEEPER-750: Flake in BookieAutoRecoveryTest#testEmptyLedgerLosesQuorumEventually (ivank via fpj)
 
+        BOOKKEEPER-756: Use HashedwheelTimer for request timeouts for PCBC (sijie via ivank)
+
       hedwig-server:
 
         BOOKKEEPER-601: readahead cache size isn't updated correctly (sijie via fpj)
