BOOKKEEPER-763: findbugs fails to run on jenkins (ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1598541 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -58,6 +58,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-644: Provide a bookie address wrapper (sijie via fpj)
 
+      BOOKKEEPER-763: findbugs fails to run on jenkins (ivank)
+
       bookkeeper-server:
 
         BOOKKEEPER-567: ReadOnlyBookieTest hangs on shutdown (sijie via ivank)
