BOOKKEEPER-758: Add TryReadLastAddConfirmed API (sijie via ivank)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1598565 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -196,6 +196,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-756: Use HashedwheelTimer for request timeouts for PCBC (sijie via ivank)
 
+        BOOKKEEPER-758: Add TryReadLastAddConfirmed API (sijie via ivank)
+
       hedwig-server:
 
         BOOKKEEPER-601: readahead cache size isn't updated correctly (sijie via fpj)
