BOOKKEEPER-766: Update notice.txt files to include 2014 (ivank via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/branches/branch-4.2@1600592 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Release 4.2.3 - 2013-12-04
 
     BUGFIXES:
 
+     BOOKKEEPER-766: Update notice.txt files to include 2014 (ivank via fpj)
+
       bookkeeper-server:
 
         BOOKKEEPER-711: bookkeeper-daemon.sh will not remove the pid file one successful stop (vinay via sijie)
