BOOKKEEPER-766: Update notice.txt files to include 2014 (ivank via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1600594 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -60,6 +60,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-763: findbugs fails to run on jenkins (ivank)
 
+      BOOKKEEPER-766: Update notice.txt files to include 2014 (ivank via fpj)
+
       bookkeeper-server:
 
         BOOKKEEPER-567: ReadOnlyBookieTest hangs on shutdown (sijie via ivank)
