--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -61,6 +61,8 @@ Trunk (unreleased changes)
       BOOKKEEPER-763: findbugs fails to run on jenkins (ivank)
 
       BOOKKEEPER-766: Update notice.txt files to include 2014 (ivank via fpj)
+      
+      BOOKKEEPER-767: Allow loopback in tests (ivank via fpj)
 
       bookkeeper-server:
 
