--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -210,6 +210,10 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-746: 5 new shell commands. List ledgers, list metadata, list underreplicated, show auditor and simpletest (ivank)
 
+      bookkeeper-benchmark:
+
+        BOOKKEEPER-768: fix typo 'seconds' to milliseconds in benchmark output (jialin via sijie)
+
       hedwig-server:
 
         BOOKKEEPER-601: readahead cache size isn't updated correctly (sijie via fpj)
