BOOKEEPER-697. stats collection on bookkeeper server (sijie via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1615338 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -298,6 +298,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-739: Test timeouts mostly ignored (sijie via fpj)
 
+      BOOKKEEPER-697: stats collection on bookkeeper server (sijie via fpj)
+
     NEW FEATURE:
 
       BOOKKEEPER-562: Ability to tell if a ledger is closed or not (fpj)
