--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -212,6 +212,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-774: Flaky test org.apache.bookkeeper.test.ReadOnlyBookieTest.testBookieShouldTurnWritableFromReadOnly (sijie)
 
+        BOOKKEEPER-704: reconnectable zookeeper client wrapper (sijie via ivank)
+
       bookkeeper-benchmark:
 
         BOOKKEEPER-768: fix typo 'seconds' to milliseconds in benchmark output (jialin via sijie)
