--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -214,6 +214,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-704: reconnectable zookeeper client wrapper (sijie via ivank)
 
+        BOOKKEEPER-630: Add tag to o.a.b.net.* to indict which release of hadoop they came from, move DNS to o.a.b.net.* and indent (sijie via ivank)
+
       bookkeeper-benchmark:
 
         BOOKKEEPER-768: fix typo 'seconds' to milliseconds in benchmark output (jialin via sijie)
