--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -216,6 +216,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-630: Add tag to o.a.b.net.* to indict which release of hadoop they came from, move DNS to o.a.b.net.* and indent (sijie via ivank)
 
+	BOOKKEEPER-780: Findbug issue in trunk (ivank via fpj)
+
       bookkeeper-benchmark:
 
         BOOKKEEPER-768: fix typo 'seconds' to milliseconds in benchmark output (jialin via sijie)
