--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -218,6 +218,8 @@ Trunk (unreleased changes)
 
 	BOOKKEEPER-780: Findbug issue in trunk (ivank via fpj)
 
+        BOOKKEEPER-777: Flake in LedgerCloseTest (ivank via fpj)
+
       bookkeeper-benchmark:
 
         BOOKKEEPER-768: fix typo 'seconds' to milliseconds in benchmark output (jialin via sijie)
