--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -224,6 +224,10 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-768: fix typo 'seconds' to milliseconds in benchmark output (jialin via sijie)
 
+      bookkeeper-stats-providers:
+
+        BOOKKEEPER-779: jmx reporter for codahale metrics provider (ivank via sijie)
+
       hedwig-server:
 
         BOOKKEEPER-601: readahead cache size isn't updated correctly (sijie via fpj)
