--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -220,6 +220,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-777: Flake in LedgerCloseTest (ivank via fpj)
 
+        BOOKKEEPER-718: AuditorLedgerCheckerTest is flakey (ivank via sijie)
+
       bookkeeper-benchmark:
 
         BOOKKEEPER-768: fix typo 'seconds' to milliseconds in benchmark output (jialin via sijie)
