BOOKKEEPER-736: Stats for AutoRecovery (sijie)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1622832 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -222,6 +222,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-718: AuditorLedgerCheckerTest is flakey (ivank via sijie)
 
+        BOOKKEEPER-736: Stats for AutoRecovery (sijie)
+
       bookkeeper-benchmark:
 
         BOOKKEEPER-768: fix typo 'seconds' to milliseconds in benchmark output (jialin via sijie)
