--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -228,6 +228,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-768: fix typo 'seconds' to milliseconds in benchmark output (jialin via sijie)
 
+        BOOKKEEPER-778: Flake in TestTryReadLastConfirmed (ivank via sijie)
+
       bookkeeper-stats-providers:
 
         BOOKKEEPER-779: jmx reporter for codahale metrics provider (ivank via sijie)
