BOOKKEEPER-781: Fix OOM on Hedwig Tests (sijie via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1623713 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -320,6 +320,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-697: stats collection on bookkeeper server (sijie via fpj)
 
+      BOOKKEEPER-781: Fix OOM on Hedwig Tests (sijie via fpj)
+
     NEW FEATURE:
 
       BOOKKEEPER-562: Ability to tell if a ledger is closed or not (fpj)
