BOOKKEEPER-775: Improve MultipleThreadReadTest to reduce flakiness (sijie via fpj)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1624161 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -226,6 +226,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-736: Stats for AutoRecovery (sijie)
 
+	BOOKKEEPER-775: Improve MultipleThreadReadTest to reduce flakiness (sijie via fpj)
+
       bookkeeper-benchmark:
 
         BOOKKEEPER-768: fix typo 'seconds' to milliseconds in benchmark output (jialin via sijie)
