--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -228,6 +228,8 @@ Trunk (unreleased changes)
 
 	BOOKKEEPER-775: Improve MultipleThreadReadTest to reduce flakiness (sijie via fpj)
 
+        BOOKKEEPER-783: Avoid running out of fds in MutlipleThreadReadTest (sijie via ivank)
+
       bookkeeper-benchmark:
 
         BOOKKEEPER-768: fix typo 'seconds' to milliseconds in benchmark output (jialin via sijie)
