BOOKKEEPER-785: Fix javadoc warnings in trunk (ivank via sijie)
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1625885 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -230,6 +230,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-783: Avoid running out of fds in MutlipleThreadReadTest (sijie via ivank)
 
+        BOOKKEEPER-785: Fix javadoc warnings in trunk (ivank via sijie)
+
       bookkeeper-benchmark:
 
         BOOKKEEPER-768: fix typo 'seconds' to milliseconds in benchmark output (jialin via sijie)
