--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -234,6 +234,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-784: BookKeeperCloseTest#testLedgerCheck is failing intermittently (ivank via sijie)
 
+        BOOKKEEPER-782: Use builder pattern for Cookie (rakeshr via sijie)
+
       bookkeeper-benchmark:
 
         BOOKKEEPER-768: fix typo 'seconds' to milliseconds in benchmark output (jialin via sijie)
