--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -236,6 +236,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-782: Use builder pattern for Cookie (rakeshr via sijie)
 
+        BOOKKEEPER-787: Modify Cookie by removing 'znodeVersion' state/field (rakeshr via ivank)
+
       bookkeeper-benchmark:
 
         BOOKKEEPER-768: fix typo 'seconds' to milliseconds in benchmark output (jialin via sijie)
