--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,17 @@
+Trunk (unreleased changes)
+
+  Non-backward compatible changes:
+
+    BUGFIXES:
+
+    IMPROVEMENTS:
+
+  Backward compatible changes:
+
+    BUGFIXES:
+
+    IMPROVEMENTS:
+
 Release 4.3.0 - 2014-10-03
 
   Non-backward compatible changes:
