--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -70,6 +70,8 @@ Release 4.3.0 - 2014-10-03
 
       BOOKKEEPER-790: Add JNA license in NOTICE files (sijie)
 
+      BOOKKEEPER-789: Update README to reflect bookkeeper modules (sijie)
+
       bookkeeper-server:
 
         BOOKKEEPER-567: ReadOnlyBookieTest hangs on shutdown (sijie via ivank)
