BOOKKEEPER-793: Move to java 7
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1631943 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,8 @@ Trunk (unreleased changes)
 
     BUGFIXES:
 
+      BOOKKEEPER-793: Move to java 7
+
     IMPROVEMENTS:
 
 Release 4.3.0 - 2014-10-03
