BOOKKEEPER-797: IllegalArgumentException when calling CodahaleOpStatsLogger#toOpStatsData()
git-svn-id: https://svn.apache.org/repos/asf/zookeeper/bookkeeper/trunk@1640597 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-793: Move to java 7
 
+      BOOKKEEPER-797: IllegalArgumentException when calling CodahaleOpStatsLogger#toOpStatsData()
+
     IMPROVEMENTS:
 
 Release 4.3.0 - 2014-10-03
