--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+Release 4.3.1 - unreleased
+
+  Backward compatible changes:
+
+    BUGFIXES:
+
 Release 4.3.0 - 2014-10-03
 
   Non-backward compatible changes:
