--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+Release 4.2.4 - unreleased
+
+  Backward compatible changes:
+
+    BUGFIXES:
+
 Release 4.2.3 - 2014-06-27
 
   Backward compatible changes:
