BOOKKEEPER-800: Expose whether a ledger is closed or not (ivank)

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,10 @@ Release 4.3.1 - unreleased
 
       BOOKKEEPER-815: Ledger fence state is lost when the ledger file is evicted (Charles Xie via ivank)
 
+    IMPROVEMENTS:
+
+      BOOKKEEPER-800: Expose whether a ledger is closed or not (ivank)
+
 Release 4.3.0 - 2014-10-03
 
   Non-backward compatible changes:
