--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,11 @@ Release 4.2.4 - unreleased
 
       BOOKKEEPER-815: Ledger fence state is lost when the ledger file is evicted (Charles Xie via ivank)
 
+    IMPROVEMENTS:
+
+      BOOKKEEPER-800: Expose whether a ledger is closed or not (ivank)
+
+
 Release 4.2.3 - 2014-06-27
 
   Backward compatible changes:
