BOOKKEEPER-827 change throttle in GarbageCollector to use either "by entry" or "by byte" (Jia Zhai via fpj)

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -46,6 +46,9 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-634: Provide admin tool to rename bookie identifier in ledger metadata (rakeshr via ivank)
 
+      BOOKKEEPER-827: change throttle in GarbageCollector to use 
+      either "by entry" or "by byte" (Jia Zhai via fpj)
+
       bookkeeper-client:
 
         BOOKKEEPER-810: Allow to configure TCP connect timeout (Charles Xie via sijie)
