BOOKKEEPER-837: UpdateLedgerOp - Replace AbstractFuture with SettableFuture (rakeshr via sijie)

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -55,6 +55,8 @@ Trunk (unreleased changes)
  
       BOOKKEEPER-830: Documentation has no structure (ivank via fpj)
 
+      BOOKKEEPER-837: UpdateLedgerOp - Replace AbstractFuture with SettableFuture (rakeshr via sijie)
+
       bookkeeper-client:
 
         BOOKKEEPER-810: Allow to configure TCP connect timeout (Charles Xie via sijie)
