BOOKKEEPER-840: Deadlock on flushLock on compaction (sijie)

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -32,6 +32,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-839: AuditorPeriodicCheckTest timeout (rakeshr via sijie)
 
+      BOOKKEEPER-840: Deadlock on flushLock on compaction (sijie)
+
     IMPROVEMENTS:
 
       BOOKKEEPER-800: Expose whether a ledger is closed or not (ivank)
