BOOKKEEPER-828: Script for updating docs on website from master branch (ivank via sijie)

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -61,6 +61,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-831: Outdated links in tutorial (ivank via sijie)
 
+      BOOKKEEPER-828: Script for updating docs on website from master branch (ivank via sijie)
+
       bookkeeper-client:
 
         BOOKKEEPER-810: Allow to configure TCP connect timeout (Charles Xie via sijie)
